<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_pro_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="@color/black"
                app:civ_border_width="1dp"
                tools:ignore="MissingClass" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:shadowColor="#050505"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/tv_reg"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_reg_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_name_hint"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_reg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/tv_reg_email_hint"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:visibility="visible" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_reg_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/tv_reg_phone_hint"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="phone"
                android:maxLength="15"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_reg_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_login_password"
                android:textSize="14sp"
                android:textColor="@color/gray"
                />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLength="15"
                android:singleLine="true" />

            <!--            <ImageView-->
            <!--                android:id="@+id/ivShowHidePassword"-->
            <!--                android:layout_width="20dp"-->
            <!--                android:layout_height="20dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_marginStart="6dp"-->
            <!--                android:contentDescription="@string/app_name"-->
            <!--                android:src="@drawable/ic_eye_visible" />-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:includeFontPadding="false"
                android:textColor="@color/gray"
                android:text="@string/text_enter_cpassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/xml_textbox_bg"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/ivShowHidePassword"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_eye_visible" />

            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bk"
                android:text="@string/tv_reg"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>