<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
   >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:id="@+id/layoutContainerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/ic_email"
                    android:contentDescription="@string/app_name" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:hint="@string/tv_login_phone"
                    android:imeOptions=""
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="phone"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:background="@drawable/xml_textbox_bg"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/ic_lock" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/text_enter_password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:background="@drawable/xml_textbox_bg"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/ivShowHidePassword"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/ic_eye_visible" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_bk"
                android:layout_marginEnd="18dp"
                android:text="@string/btn_login" />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:includeFontPadding="false"
                android:text="@string/text_create_an_account"
                android:textAllCaps="false"
                android:background="@drawable/button_bk"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>